--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -5,6 +5,7 @@ on:
     types: [labeled]
 
 jobs:
-  build:
-  runs-on: ubuntu-latest
+   build:
+     runs-on: ubuntu-latest
+     if: contains(github.event.pull_request.labels.*.name, 'stage')
   
